              you should not see difference for Invoices/Quotes/Sales Orders.
              The numbers for Credit Notes are not automatically generated at their creation anymore.
              These variables in settings.py have been removed :
                - QUOTE_NUMBER_PREFIX
                - INVOICE_NUMBER_PREFIX
                - SALESORDER_NUMBER_PREFIX
            - The 'Convert to ...' buttons have been reworked :
                - When a button is disabled, the reason is displayed as tool-tip.
                - The constraints for properties & relationships are better respected.
        * Opportunities :
            - You can now create unsuccessful phone calls from an Opportunity's detail-view :
                - A button has been added (not enabled in default installations).
                - In the block "Linked Contacts", you can activate an new action in the configuration (idem).
            - The field 'Opportunity.chance_to_win' checks now that the value is between 0 & 100.

  Developers side :
  -----------------

    Non breaking changes :
    ----------------------
        # Deprecations :
            - The method 'creme_core.core.entity_cell.EntityCellCustomField.build()' with integer "value" is deprecated;
              pass a string (ID ou UUID) instead.
            - In 'creme_core.models :
                - The method 'CremePropertyTypeManager.smart_update_or_create() is deprecated;
                  use the classical methods 'create()' or 'update_or_create()' instead.
                  Notice: if you still want to set the field "subject_ctypes" from models like before,
                          you can use the new method 'CremePropertyType.set_subject_ctypes()'.
                - These methods of 'CremeEntity' are now deprecated (use the new module 'creme_core.core.cloning' instead) :
                    - clone()
                    - _clone_object()
                    - _clone_custom_values()
                    - _clone_m2m()